# url_shortner_fastapi

./: README.md  database.py  dependencies.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 02858a5be83f_create_oauth_token_table.py  3f03be2da6f0_added_url_table.py  5a06b7c481d0_create_user_table.py
api/v1/: router.py
api/v1/routes/: oauth.py  url.py  user.py
config/: app.py
models/: oauth_token.py  url.py  url_event.py  url_statistic.py  user.py
schemas/: oauth.py  pagination.py  url.py  user.py
services/: oauth_service.py  url_service.py  user_service.py
